1999-11-15  Scott Thomas Haug  <sth2@cs.wustl.edu>

	* tag_render.cpp:
	Added include for config.h.  Minor code cleanup.  Removed
 	assignments from if checks; first makes assignment, then checks
 	for appropriate value.  Made private member variable names more
	descriptive.  Now uses mktemp rather than mkstemp in
	GenerateTempName so that a file descriptor isn't created along
	with the temporary name.

	* tag_find.cpp:
	Added include for config.h.  Removed assignments from if checks;
 	first makes assignment, then checks for appropriate value.  Made
 	private member variable names more descriptive.  Major code
	cleanup: use of for loops instead of while's to ease code
	readability, more compact looping structures to reduce possibility 
	in coding or human parsing errors,

	* tag_file.cpp:
	Added include for config.h.  Minor code cleanup.  Removed
 	assignments from if checks; first makes assignment, then checks
 	for appropriate value.  Made private member variable names more
	descriptive.  OpenLinkedFile now checks to see if the file is
	writable or not, and still opens the file, even if it can't be
	written to.  This needs to be more robust (i.e., we shouldn't be
	creating temp files if the file isn't writable).  Made use of
	bFileWrtiable variable, which was introduced.
	
	* tag.h:
	Made variable names more descriptive.  Added const qualifier to
	appropriate methods.
	
	* int28.cpp: 
	Added include for config.h. Changed some ints to luints to avoid
	compiler warnings.

	* header.h, header_frame.h:
	Made variable names more descriptive.
	
	* header.cpp:
	Added include for config.h.  Minor code cleanup.  Made private
	member variable names more descriptive.  Fixed bug I introduced in
	logic of checking version/revision numbers in
	ID3_LookupHeaderInfo, and cleaned up the code in the process.

	* frame.h: 
	Made ID3_Tag a friend of ID3_Frame to allow access to the private
	members in ID3_Frame.  Made variable names more descriptive.